[package]
name = "babylon"
description = "A mapping library of sorts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = { version="1.17.0", features=["rt", "macros"] }
serde = { version="1.0.136", features=["derive"]}
serde_json = "1.0.79"
once_cell = "1.10.0"
reqwest = "0.11.10"

[dependencies.openmaps-api]
version = "0.1.0"
path = "openmaps-api"